--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,7 @@
     -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.157);
   }
+
+.effect{
+    background-image: linear-gradient(to right, rgba(37, 35, 35, 0.935), rgb(25, 23, 23));
+}
